--- a/BLL/Properties/PubResources.resx
+++ b/BLL/Properties/PubResources.resx
@@ -117,22 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AssassinsColor" xml:space="preserve">
-    <value>#841EA6</value>
+  <data name="Pub" xml:space="preserve">
+    <value>"The Mended Drum" pub</value>
   </data>
-  <data name="BeggarsColor" xml:space="preserve">
-    <value>#105B20</value>
+  <data name="PubLoseGame" xml:space="preserve">
+    <value>That's strange. You lost a chance to survive. *These players, sometimes, are so illogical.</value>
   </data>
-  <data name="Black" xml:space="preserve">
-    <value>#000000</value>
+  <data name="PubPlayerLackOfMoneyPostscript" xml:space="preserve">
+    <value>Unfortunately, you didn't have enough money to buy a pint of beer.</value>
   </data>
-  <data name="FoolsColor" xml:space="preserve">
-    <value>#BEBB19</value>
-  </data>
-  <data name="PubColor" xml:space="preserve">
-    <value>#A80C0C</value>
-  </data>
-  <data name="ThievesColor" xml:space="preserve">
-    <value>#107ECC</value>
+  <data name="PubWelcomeMessage" xml:space="preserve">
+    <value>Welcome to the "The Mended Drum" pub. Our price : 1 pint of beer = 2$ AM.</value>
   </data>
 </root>
